--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# Auto-generated files
-elm-stuff/
-*~
-
-# Compilation result
+# Ignore auto-generated files
 elm.js
+elm-stuff/
+
+# Ignore all hidden files
+.*
+*~
+ 
+# Except .gitignore itself
+!.gitignore
