--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -12,7 +12,7 @@ on:
     - .github/workflows/copilot-setup-steps.yml
 
 jobs:
-  setup-copilot-environment:
+  copilot-setup-steps:
     runs-on: ubuntu-latest
     name: Setup Copilot Agent Environment
     
